fix(a11y): wcag contrast issue on search icon (#45716)
* fix: hack the colours

* Revert "fix: hack the colours"

This reverts commit bd60d44c84db2f81e46b2d64a84d1fe94d4d872c.

* fix: global sr-only approach

* fix: motivation author colour

--- a/client/src/components/layouts/global.css
+++ b/client/src/components/layouts/global.css
@@ -638,3 +638,9 @@ blockquote .small {
 #search::placeholder {
   color: var(--secondary-color);
 }
+
+/* WCAG fix */
+.sr-only {
+  color: white;
+  background-color: black;
+}
